# rusty_v8

./: .clangd  .dockerignore  .gclient  .gitattributes  .gitignore  .gitmodules  .gn  .prettierrc.json  .rustfmt.toml  BUILD.gn  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs  build_overrides  buildtools  cargo_gn.rs  config.mak  env.bat  gclient_config.py  lto.md  musl-build.sh  rust-toolchain.toml  test_bindgen.sh  testing  v8
.cargo/: config  config.toml
.github/: dependabot.yml
.github/workflows/: asan.yml  ci.yml  release.yml  update-v8.yml
benches/: function.rs  string.rs  to_string.rs
bindings/: binding.cc  support.h
build_overrides/: build.gni  gtest.gni
buildtools/mac/: gn
buildtools2/linux64/: gn
examples/: android_fractal.js  android_fractal.rs  bench_call.rs  cppgc-object.rs  cppgc.rs  hello_world.rs  ios_jitless.rs  process.rs  shell.rs
examples/android/: Cargo.toml  fractal.js  lib.rs
goog/: .gclient  args.gn
libdeno/: v8
patches/: 0001-Remove-googletest-visibility-workaround-in-BUILD.gn.patch  0002-Fix-crash-on-Apple-Silicon-when-mprotect-fails-expec.patch  0003-Apply-V8_TLS_USED_IN_LIBRARY-to-internal_config.patch  0004-Speed-up-snapshot-deserialization-for-embedders.patch
rusty_v8_derive/: Cargo.toml
rusty_v8_derive/src/: lib.rs
scripts/: build_v8.py  cipd.py  common.py  download_v8.py  dumb_cipd.py  dumb_gclient.py  gclient.py  patch_build.py  utils.py  v8_build.py  v8_download.py
src/: BUILD.gn  JSON.rs  V8.cc  V8.rs  array_buffer.cc  array_buffer.rs  array_buffer_view.rs  bigint.rs  binding.cc  binding.hpp  binding.rs  callback.rs  callback_scope.rs  context.cc  context.rs  cppgc.rs  crdtp.rs  crdtp_binding.cc  cxx_util.rs  data.rs  date.rs  exception.cc  exception.rs  external.rs  external_references.rs  fast_api.rs  fixed_array.rs  function.cc  function.rs  gc.rs  get_property_names_args_builder.rs  global.rs  handle.rs  handle_scope.cc  handle_scope.rs  icu.rs  inspector.rs  isolate.cc  isolate.rs  isolate_create_params.rs  (+65 more)
src/deno_inspector/: BUILD.gn  inspector_protocol_config.json  string_util.cc  string_util.h
src/inspector/: README.md  channel.cc  channel.cpp  channel.rs  client.cc  client.cpp  client.rs  context_info.rs  inspector.rs  mod.rs  session.rs  string_buffer.cc  string_buffer.rs  string_view.rs  v8_inspector.rs  v8_stack_trace.rs
src/platform/: mod.cc  mod.rs  task.cc  task.cpp  task.rs
src/scope/: raw.rs
src/scope2/: raw.rs
src/v8/: mod.rs  string_buffer.cpp  string_buffer.rs  string_view.rs
src/v8/inspector/: channel.cpp  channel.rs  client.cpp  client.h  client.rs
src/v8/platform/: mod.rs  task.cpp  task.rs
src/v8_inspector/: channel.h  channel.rs  client.h  client.rs  mod.rs  string_buffer.h  string_buffer.rs  string_view.rs
testing/: README.deno
tests/: integration_tests.rs  isolate_with_state.rs  layers.rs  slots.rs  test_api.rs  test_api_entropy_source.rs  test_api_flags.rs  test_api_wee8.rs  test_cast.rs  test_concurrent_isolate_creation_and_disposal.rs  test_cppgc.rs  test_cross_thread_locker.rs  test_custom_platform.rs  test_external_deserialize.rs  test_isolate_pooling.rs  test_isolate_scope.rs  test_locker.rs  test_locker_safety.rs  test_platform_atomics_pump_message_loop.rs  test_sandbox_use.rs  test_simdutf.rs  test_simple_external.rs  test_single_threaded_default_platform.rs  test_ui.rs
tests/compile_fail/: boxed_lifetimes.stderr  boxed_local.rs  boxed_local.stderr  build_fast_local_overloads.rs  build_fast_local_overloads.stderr  drop_scope_before_local.rs  drop_scope_before_local.stderr  global_map_lifetime_1.rs  global_map_lifetime_1.stderr  global_map_lifetime_2.rs  global_map_lifetime_2.stderr  handle_open_lifetime_1.rs  handle_open_lifetime_1.stderr  handle_open_lifetime_2.rs  handle_open_lifetime_2.stderr  handle_scope_escape_lifetime.rs  handle_scope_escape_lifetime.stderr  handle_scope_escape_to_nowhere.rs  handle_scope_escape_to_nowhere.stderr  handle_scope_lifetime_1.rs  handle_scope_lifetime_1.stderr  handle_scope_lifetime_2.rs  handle_scope_lifetime_2.stderr  handle_scope_lifetime_3.rs  handle_scope_lifetime_3.stderr  handle_scope_lifetime_4.rs  handle_scope_lifetime_4.stderr  handle_scope_lifetimes.rs  handle_scope_lifetimes.stderr  local_outlive_handle_scope.rs  local_outlive_handle_scope.stderr  locker_double_borrow.rs  locker_double_borrow.stderr  locker_not_send.rs  locker_not_send.stderr  locker_scope_outlives.rs  locker_scope_outlives.stderr  object_without_context_scope.rs  object_without_context_scope.stderr  try_catch_exception_lifetime.rs  (+5 more)
toolchain/: BUILD.gn
tools/: auto_update_v8.ts  clang  download_file.py  generate_compdb.py  get_bindgen_args.py  gn_ninja_binaries.py  musl-build.sh  ninja_gn_binaries.py  rust_toolchain.py  setup_rbe.py  update_deps.py  upgrade_v8.sh  v8_deps.py
tools/memory/tsan_v2/: ignores.txt
tools/ubsan/: ignorelist.txt
