[package]
name = "rusty_v8"
version = "0.25.4"
description = "Rust bindings to V8"
readme = "README.md"
authors = ["the Deno authors"]
license = "MIT"
edition = "2018"
repository = "https://github.com/denoland/rusty_v8"

exclude = [
 # To keep the package under the 10mb limit imposed by crates.io we exclude
 # a lot of files that are not needed for the build.
 "*.css",
 "*.gyp",
 "*.gypi",
 "*.html",
 "*.m4",
 "*.md",
 "*.settings",
 "*.txt",
 "*OWNERS*",
 ".*",
 "AUTHORS",
 "Doxyfile*",
 "LICENSE*",
 "Makefile*",
 "README*",
 "build/android/",
 "build/chromeos/",
 "build/fuchsia/",
 "buildtools/checkdeps/",
 "buildtools/clang_format/",
 "buildtools/third_party/libc++/trunk/benchmarks/",
 "buildtools/third_party/libc++/trunk/docs/",
 "buildtools/third_party/libc++/trunk/lib/",
 "buildtools/third_party/libc++/trunk/test/",
 "buildtools/third_party/libc++/trunk/utils/",
 "buildtools/third_party/libc++/trunk/www/",
 "buildtools/third_party/libc++abi/trunk/test/",
 "third_party/icu/android/",
 "third_party/icu/android_small/",
 "third_party/icu/cast/",
 "third_party/icu/chromeos/",
 "third_party/icu/common/icudtb.dat",
 "third_party/icu/flutter/",
 "third_party/icu/ios/",
 "third_party/icu/patches/",
 "third_party/icu/source/config/",
 "third_party/icu/source/data/",
 "third_party/icu/source/extra/",
 "third_party/icu/source/io/",
 "third_party/icu/source/python/",
 "third_party/icu/source/samples/",
 "third_party/icu/source/tools/",
 "third_party/icu/tzres/",
 "tools/clang",
 "v8/ChangeLog",
 "v8/benchmarks/",
 "v8/docs/",
 "v8/samples/",
 "v8/test/",
 "v8/tools/",
 # These files are required for the build.
 "!.gn",
 "!BUILD.gn",
 "!tools/clang/scripts/update.py",
 "!v8/test/torque/test-torque.tq",
 "!v8/tools/gen-postmortem-metadata.py",
 "!v8/tools/gen-v8-gn.py",
 "!v8/tools/js2c.py",
 "!v8/tools/run.py",
 "!v8/tools/snapshot/asm_to_inline_asm.py",
 "!v8/tools/testrunner/utils/dump_build_config.py",
]

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.93"
bitflags = "1.2.1"

[build-dependencies]
which = "4.1.0"
fslock = "0.1.6"

[dev-dependencies]
trybuild = "1.0.42"
align-data = "0.1.0"

[[example]]
name = "hello_world"

[[example]]
name = "shell"

[[example]]
name = "process"
